syntax = "proto3";

package proto.message;

message Response {
    Status status = 1;
    string message = 2;

    enum Status {
        SUCCESS = 0;
        FAILURE = 1;
    }
}

// a protocol define a set of reuqest and responses
message AddPeerRequest {
    // method specific data
    string message = 1;
    // add any data here....
}

message AddPeerResponse {
    // response specific data
    Response response = 1;

    // ... add any additional message data here
}

message Collation {
    int64 shardID = 1;
    int64 period = 2;
    string blobs = 3;
}

message CollationRequest {
    int64 shardID = 1;
    int64 period = 2;
    string hash = 3;
}

message CollationResponse {
    Response response = 1;
    Collation collation = 2;
}

message ShardPeerRequest {
    int64 shardID = 1;
}

message ShardPeerResponse {
    Response response = 1;
    repeated string peers = 2;
}

message NotifyShardsRequest {
    repeated int64 shardIDs = 1;
}
